# web3

./: CoinGame.html  README.md
01_HelloWorldV3/: README.md
04_FirstToken/: README.md  hardhat.config.js  package.json
05_RPSGame/: README.md
06_MyNFT/: README.md
07_UpgradableCounter_Initializable/: README.md
09_SBTs/: README.md
108-au-account-abstraction-deploy-a-smart-account/: README.md  hardhat.config.ts
10_LepusDAO/: README.md
113-au-modular-account-plugin-subscription-plugin/: README.md
117-hello-circom/: README.md  circuit_0000.zkey  pot12_0001.ptau  proof.json  verification_key.json
118-python-hello-fri/: README.md  fri_demo.py  使用指南.md
11_SimpleVoting/: README.md
127-Plonky3/: README.md
128-kyc-dex/: README.md
129-fri-paper/: README.md
12_HelloOptimism/: README.md
130-PLONK-paper/: README.md
131-PLONK-course/: COURSE_COMPLETION.md  COURSE_INDEX.md  README.md
132-Plonky2-course/: COURSE_OVERVIEW.md  README.md
132-Plonky2-course/module6-hands-on/: Cargo.toml  README.md
132-Plonky2-course/module6-hands-on/examples/: fibonacci.rs  hello_world.rs  range_check.rs  square_root.rs
132-Plonky2-course/module6-hands-on/src/: lib.rs  utils.rs
133-Plonky2-course-v2/: COURSE_OVERVIEW.md  GETTING_STARTED.md  QUIZ_INDEX.md  README.md
134-Plonky3-course/: README.md
135-Plonky3-course-v2/: README.md
137-create-next-app-example-final/: .env.example  auth.ts  next.config.ts  package.json  pnpm-lock.yaml
138-IPFS-course/: README.md  課程導覽.md
139-rust-course-ownership/: COURSE_COMPLETION.md  COURSE_PROPOSAL.md  Cargo.toml  QUIZ_INDEX.md  README.md
139-rust-course-ownership/src/: lib.rs
139-rust-course-ownership/unit1-what-is-ownership/: QUIZ.md  README.md
139-rust-course-ownership/unit1-what-is-ownership/examples/: copy_trait.rs  memory_model.rs  move_semantics.rs  ownership_basic.rs
139-rust-course-ownership/unit2-references-borrowing/: QUIZ.md  README.md
139-rust-course-ownership/unit2-references-borrowing/examples/: borrowing_practice.rs
139-rust-course-ownership/unit3-slice-type/: QUIZ.md  README.md
139-rust-course-ownership/unit3-slice-type/examples/: slice_examples.rs
(+857 files in other folders)
