[package]
name = "plonky2-course-hands-on"
version = "0.1.0"
edition = "2021"
description = "Hands-on examples for Plonky2 course"

[dependencies]
# Plonky2 core dependencies (relative to the downloaded library)
plonky2 = { path = "../plonky2/plonky2", features = ["default"] }
plonky2_field = { path = "../plonky2/field" }
plonky2_util = { path = "../plonky2/util" }

# Additional dependencies for examples
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_generation"
harness = false

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "square_root"
path = "examples/square_root.rs"

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"

[[example]]
name = "hash_proof"
path = "examples/hash_proof.rs"

[[example]]
name = "merkle_proof"
path = "examples/merkle_proof.rs"

[[example]]
name = "range_check"
path = "examples/range_check.rs"

[[example]]
name = "simple_recursion"
path = "examples/simple_recursion.rs"